# hinglish-hate-detection

./: .gitignore  README.md  pyproject.toml
docs/: concepts.md  design-decisions.md  results.md
results/: script_comparison.json  script_comparison_4epoch_undertrained.json  transfer_results.json
scripts/: deploy_space.py  error_analysis.py  get_data.py  get_english_data.py  get_hinglish_data.py  run_script_comparison.py  run_transfer.py
space/: README.md  app.py  requirements.txt
src/hatedetect/: __init__.py  app.py  config.py  data.py  device.py  evaluate.py  infer.py  model.py  train.py
tests/: test_config.py  test_data.py  test_device.py
